// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table applies additional classNames to root table 1`] = `
<div>
  <table
    className="ds-c-table foo-table"
    role="table"
  >
    <TableCaption
      key=".0"
    >
      Foo
    </TableCaption>
  </table>
</div>
`;

exports[`Table applies borderless classes 1`] = `
<div>
  <table
    className="ds-c-table ds-c-table--borderless"
    role="table"
  >
    <TableCaption
      key=".0"
    >
      Foo
    </TableCaption>
  </table>
</div>
`;

exports[`Table applies responsive table 1`] = `
<div>
  <table
    className="ds-c-table ds-c-lg-table--stacked"
    role="table"
  >
    <TableCaption
      key=".0"
    >
      Foo
    </TableCaption>
  </table>
</div>
`;

exports[`Table applies scroll table 1`] = `
<div
  aria-labelledby="caption-7"
  aria-live="polite"
  aria-relevant="additions"
  className="ds-c-table__wrapper"
  role="region"
  tabIndex={null}
>
  <table
    className="ds-c-table"
    role="table"
  >
    <TableCaption
      _id="caption-7"
      _scrollActive={false}
      _scrollableNotice={
        <Alert
          className="ds-u-margin-y--1 ds-u-font-size--small ds-u-font-weight--normal"
          headingLevel="3"
          role="status"
        >
          <p
            className="ds-c-alert__text"
          >
            Scroll using arrow keys to see more
          </p>
        </Alert>
      }
      key=".0"
    >
      Foo
    </TableCaption>
  </table>
</div>
`;

exports[`Table applies zebra stripe classes 1`] = `
<div>
  <table
    className="ds-c-table ds-c-table--striped"
    role="table"
  >
    <TableCaption
      key=".0"
    >
      Foo
    </TableCaption>
  </table>
</div>
`;

exports[`Table renders additional attributes 1`] = `
<div>
  <table
    ariaLabel="test additional attribute"
    className="ds-c-table"
    role="table"
  >
    <TableCaption
      key=".0"
    >
      Foo
    </TableCaption>
  </table>
</div>
`;
